--- a/Prash/index.html
+++ b/Prash/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>Document</title>
+    <title>Feedback Form</title>
   </head>
   <body>
     <header>
