--- a/Prash/index.html
+++ b/Prash/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -22,16 +22,13 @@
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container">
           <div class="navbar-brand">
-            <h1><a href="./index.html" target="_blank">Aromatic Bar</a></h1>
+            <h1><a href="./index.html">Aromatic Bar</a></h1>
             <p>
               We are committed to providing you with the best dining experience
               possible, so we welcome your comments.
             </p>
           </div>
 
-          <!-- <div class="navbar-form">
-            <a href="./index.html" target="_blank">Form</a>
-          </div> -->
           <div class="navbar-table">
             <a href="./showData.html" target="_blank">Table</a>
           </div>
@@ -39,38 +36,39 @@
       </nav>
     </header>
     <!-- Heading -->
+
     <div id="all">
-      <form>
-        <div class="container">
-          <div id="body-head">Please provide your feedback below.</div>
-          <div id="main-content">
-            <div class="col-lg-4 col-md-6">
-              <div class="main">
-                <label for="FirName">Full Name*</label>
-                <input id="name" type="text" class="styl" required />
-              </div>
-            </div>
+      <form class="container">
+        <div id="body-head">Please provide your feedback below.</div>
 
-            <div class="col-lg-4 col-md-6">
-              <div class="main">
-                <label for="FirName">Email*</label>
-                <input id="mail" type="text" class="styl" required />
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-12">
-              <div class="main">
-                <label for="FirName">Phone*</label>
-                <input id="phno" type="text" class="styl" required />
-              </div>
-            </div>
+        <div class="col-lg-4  col-sm-12">
+          <div class="main">
+            <label class="labelbox">Full Name*</label>
+            <input id="name" type="text" class="styl" required />
           </div>
+        </div>
 
+        <div class="col-lg-4  col-sm-12">
+          <div class="main">
+            <label class="labelbox">Email*</label>
+            <input id="mail" type="text" class="styl" required />
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+          <div class="main">
+            <label class="labelbox">Phone*</label>
+            <input id="phno" type="text" class="styl" required />
+          </div>
+        </div>
+
+        <div class="col-sm-12">
+        <div class="radio1">
+          <h4>
+            1.Please rate the quality of the service you received from your
+            host.
+          </h4>
           <div class="radio1">
-            <h4 class="mt-2">
-              1.Please rate the quality of the service you received from your
-              host.
-            </h4>
             <label class="radio-inline"
               ><input type="radio" name="service1" value="bad" />Bad</label
             >
@@ -88,123 +86,90 @@
               />Excellent</label
             >
           </div>
+        </div>
 
-          <div class="radio2">
-            <h4 class="mt-2">
-              2.Please rate the quality of your beverage.
-            </h4>
-            <label class="radio-inline"
-              ><input type="radio" name="bvg" value="bad" />Bad</label
-            >
-            <label class="radio-inline"
-              ><input type="radio" name="bvg" value="fair" />Fair</label
-            >
-            <label class="radio-inline"
-              ><input type="radio" name="bvg" value="good" />Good</label
-            >
-            <label class="radio-inline"
-              ><input
-                type="radio"
-                name="bvg"
-                value="excellent"
-              />Excellent</label
-            >
-          </div>
-
-          <!-- <div class="radio3">
+        <div class="radio2">
           <h4 class="mt-2">
-            3.Please rate the quality of the service you received from your
-            host.
+            2.Please rate the quality of your beverage.
           </h4>
           <label class="radio-inline"
-            ><input type="radio" name="service3" value="bad" />Bad</label
+            ><input type="radio" name="bvg" value="bad" />Bad</label
           >
           <label class="radio-inline"
-            ><input type="radio" name="service3" value="fair" />Fair</label
+            ><input type="radio" name="bvg" value="fair" />Fair</label
           >
           <label class="radio-inline"
-            ><input type="radio" name="service3" value="good" />Good</label
+            ><input type="radio" name="bvg" value="good" />Good</label
+          >
+          <label class="radio-inline"
+            ><input type="radio" name="bvg" value="excellent" />Excellent</label
+          >
+        </div>
+
+        <div class="radio3">
+          <h4 class="mt-2">
+            3. Was our restaurant clean?
+          </h4>
+          <label class="radio-inline"
+            ><input type="radio" name="clean" value="bad" />Bad</label
+          >
+          <label class="radio-inline"
+            ><input type="radio" name="clean" value="fair" />Fair</label
+          >
+          <label class="radio-inline"
+            ><input type="radio" name="clean" value="good" />Good</label
           >
           <label class="radio-inline"
             ><input
               type="radio"
-              name="service3"
+              name="clean"
               value="excellent"
             />Excellent</label
           >
-        </div> -->
+        </div>
 
-          <div class="radio3">
-            <h4 class="mt-2">
-              3. Was our restaurant clean?
-            </h4>
-            <label class="radio-inline"
-              ><input type="radio" name="clean" value="bad" />Bad</label
-            >
-            <label class="radio-inline"
-              ><input type="radio" name="clean" value="fair" />Fair</label
-            >
-            <label class="radio-inline"
-              ><input type="radio" name="clean" value="good" />Good</label
-            >
-            <label class="radio-inline"
-              ><input
-                type="radio"
-                name="clean"
-                value="excellent"
-              />Excellent</label
-            >
+        <div class="radio4">
+          <h4 class="mt-2">
+            4. Please rate your overall dining experience.
+          </h4>
+          <label class="radio-inline"
+            ><input type="radio" name="dine" value="bad" />Bad</label
+          >
+          <label class="radio-inline"
+            ><input type="radio" name="dine" value="fair" />Fair</label
+          >
+          <label class="radio-inline"
+            ><input type="radio" name="dine" value="good" />Good</label
+          >
+          <label class="radio-inline"
+            ><input
+              type="radio"
+              name="dine"
+              value="excellent"
+            />Excellent</label
+          >
+        </div>
+        <div class="main">
+          <div class="msg1">
+            <label class="labelboxmsg">Message*</label>
+            <input
+              id="message"
+              type="text"
+              class="styl"
+              required
+              placeholder="Write your message here."
+            />
           </div>
+        </div>
 
-          <div class="radio4">
-            <h4 class="mt-2">
-              4. Please rate your overall dining experience.
-            </h4>
-            <label class="radio-inline"
-              ><input type="radio" name="dine" value="bad" />Bad</label
-            >
-            <label class="radio-inline"
-              ><input type="radio" name="dine" value="fair" />Fair</label
-            >
-            <label class="radio-inline"
-              ><input type="radio" name="dine" value="good" />Good</label
-            >
-            <label class="radio-inline"
-              ><input
-                type="radio"
-                name="dine"
-                value="excellent"
-              />Excellent</label
-            >
-          </div>
-
-          <div class="msg">
-            <div class="main">
-              <label for="FirName">Message*</label>
-              <input
-                id="message"
-                type="text"
-                maxlength="100"
-                placeholder="Write your message here."
-                cols="48"
-                rows="5"
-                class="styl"
-                required
-              />
-            </div>
-          </div>
-          <div id="btn">
-            <button
-              class="btn btn-primary"
-              id="btn"
-              style="width: 10%; position: absolute;"
-            >
-              Submit
-            </button>
-          </div>
+        <div id="btn">
+          <button class="btn btn-primary" id="btn">
+            Submit
+          </button>
         </div>
       </form>
     </div>
+  </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
