--- a/Assignments/module3-solution/index.html
+++ b/Assignments/module3-solution/index.html
@@ -67,25 +67,23 @@
       <div class="jumbotron">
         <span id="chicken">Chicken</span>
         <p>
-          A German physicist and astronomer named Karl Schwarzschild proposed
-          the modern version of a black hole in 1915 after coming up with an
-          exact solution to Einstein's approximations of general relativity.
-          Schwarzschild realised it was possible for mass to be squeezed into an
-          infinitely small point. This would make spacetime around it bend so
-          that nothing – not even massless photons of light – could escape its
-          curvature. The cusp of the black hole's slide into oblivion is today
-          referred to as its event horizon, and the distance between this
-          boundary and the infinitely dense core – or singularity – is named
-          after Schwarzschild. Theoretically, all masses have a Schwarzschild
-          radius that can be calculated. If the Sun's mass was squeezed into an
-          infinitely small point, it would form a black hole with a radius of
-          just under 3 kilometres (about 2 miles). Similarly, Earth's mass would
-          have a Schwarzschild radius of just a few millimetres, making a black
-          hole no bigger than a marble. For decades, black holes were exotic
-          peculiarities of general relativity. Physicists have became
-          increasingly confident in their existence as other extreme
-          astronomical objects, such as neutron stars, were discovered. Today
-          it's believed most galaxies have monstrous black holes at their core.
+          Chicken is the most common type of poultry in the world.[1] Owing to
+          the relative ease and low cost of raising them in comparison to
+          animals such as cattle or hogs, chickens have become prevalent
+          throughout the cuisine of cultures around the world, and their meat
+          has been variously adapted to regional tastes. Chicken can be prepared
+          in a vast range of ways, including baking, grilling, barbecuing,
+          frying, and boiling, among many others, depending on its purpose.
+          Since the latter half of the 20th century, prepared chicken has become
+          a staple of fast food. Chicken is sometimes cited as being more
+          healthful than red meat, with lower concentrations of cholesterol and
+          saturated fat.[2] The poultry farming industry that accounts for
+          chicken production takes on a range of forms across different parts of
+          the world. In developed countries, chickens are typically subject to
+          intensive farming methods, while less-developed areas raise chickens
+          using more traditional farming techniques. The United Nations
+          estimates there to be 19 billion chickens on Earth today, making them
+          outnumber humans more than two to one.
         </p>
       </div>
       <br />
@@ -93,26 +91,26 @@
       <div class="jumbotron">
         <span id="beef">Beef</span>
         <p>
-          A German physicist and astronomer named Karl Schwarzschild proposed
-          the modern version of a black hole in 1915 after coming up with an
-          exact solution to Einstein's approximations of general relativity.
-          Schwarzschild realised it was possible for mass to be squeezed into an
-          infinitely small point. This would make spacetime around it bend so
-          that nothing – not even massless photons of light – could escape its
-          curvature. The cusp of the black hole's slide into oblivion is today
-          referred to as its event horizon, and the distance between this
-          boundary and the infinitely dense core – or singularity – is named
-          after Schwarzschild. Theoretically, all masses have a Schwarzschild
-          radius that can be calculated. If the Sun's mass was squeezed into an
-          infinitely small point, it would form a black hole with a radius of
-          just under 3 kilometres (about 2 miles). Similarly, Earth's mass would
-          have a Schwarzschild radius of just a few millimetres, making a black
-          hole no bigger than a marble. For decades, black holes were exotic
-          peculiarities of general relativity. Physicists have became
-          increasingly confident in their existence as other extreme
-          astronomical objects, such as neutron stars, were discovered. Today
-          it's believed most galaxies have monstrous black holes at their
-          core.<br />
+          Beef is the culinary name for meat from cattle, particularly skeletal
+          muscle. Humans have been eating beef since prehistoric times.[1] Beef
+          is a source of high-quality protein and nutrients.[2] Most beef
+          skeletal muscle meat can be used as is by merely cutting into certain
+          parts, such as roasts, short ribs or steak (filet mignon, sirloin
+          steak, rump steak, rib steak, rib eye steak, hanger steak, etc.),
+          while other cuts are processed (corned beef or beef jerky). Trimmings,
+          on the other hand, are usually mixed with meat from older, leaner
+          (therefore tougher) cattle, are ground, minced or used in sausages.
+          The blood is used in some varieties called blood sausage. Other parts
+          that are eaten include other muscles and offal, such as the oxtail,
+          liver, tongue, tripe from the reticulum or rumen, glands (particularly
+          the pancreas and thymus, referred to as sweetbread), the heart, the
+          brain (although forbidden where there is a danger of bovine spongiform
+          encephalopathy, BSE, commonly referred to as mad cow disease), the
+          kidneys, and the tender testicles of the bull (known in the United
+          States as calf fries, prairie oysters, or Rocky Mountain oysters).
+          Some intestines are cooked and eaten as is,[3] but are more often
+          cleaned and used as natural sausage casings. The bones are used for
+          making beef stock. Meat from younger cows (calves) is called veal.<br />
           <a href="#header-nav">Back to top</a>
         </p>
       </div>
@@ -121,26 +119,21 @@
       <div class="jumbotron">
         <span id="sushi">Sushi</span>
         <p>
-          A German physicist and astronomer named Karl Schwarzschild proposed
-          the modern version of a black hole in 1915 after coming up with an
-          exact solution to Einstein's approximations of general relativity.
-          Schwarzschild realised it was possible for mass to be squeezed into an
-          infinitely small point. This would make spacetime around it bend so
-          that nothing – not even massless photons of light – could escape its
-          curvature. The cusp of the black hole's slide into oblivion is today
-          referred to as its event horizon, and the distance between this
-          boundary and the infinitely dense core – or singularity – is named
-          after Schwarzschild. Theoretically, all masses have a Schwarzschild
-          radius that can be calculated. If the Sun's mass was squeezed into an
-          infinitely small point, it would form a black hole with a radius of
-          just under 3 kilometres (about 2 miles). Similarly, Earth's mass would
-          have a Schwarzschild radius of just a few millimetres, making a black
-          hole no bigger than a marble. For decades, black holes were exotic
-          peculiarities of general relativity. Physicists have became
-          increasingly confident in their existence as other extreme
-          astronomical objects, such as neutron stars, were discovered. Today
-          it's believed most galaxies have monstrous black holes at their
-          core.<br />
+          Sushi (寿司) is a traditional food from Japan. It is a popular dish in
+          other countries as well, such as America, Canada, and the UK, along
+          with many other countries. Sushi is made with specially prepared rice.
+          The rice is mixed with vinegar, salt, and sugar. Sushi also contains
+          raw or cooked seafood, and sometimes vegetables as well. Sometimes
+          sushi is wrapped in a sheet of seaweed called nori. There are many
+          different kinds of sushi. The most common sushi in Japan is
+          nigirizushi: fish that is placed on top of a small portion of sushi
+          rice. Sometimes you may find other ingredients on top of rice, such as
+          egg instead of fish. Makizushi consists of rice rolled around fish
+          and/or vegetables. In America, makizushi is more popular than
+          nigirizushi. Another type is known as temaki or a hand roll. This kind
+          of sushi comes in a cone-shape, created by the nori wrapped around the
+          ingredients inside. They are usually filled with a mixture of rice,
+          fish, and vegetables.<br />
           <a href="#header-nav">Back to top</a>
         </p>
       </div>
